--- a/index.html
+++ b/index.html
@@ -699,8 +699,7 @@
                         target="_blank"
                         >carlcastanas</a
                       >
-                      Responsive clone of Instagram UI. Made with ❤ for study
-                      purposes.
+                      Nito and Morry
                     </span>
                   </div>
 
